--- a/index.html
+++ b/index.html
@@ -101,16 +101,16 @@
               <div class="row">
                   <div class="col-xs-12">
                       <h2>Featured Work</h2>
-                      <div class="feature-work-wrapper">
-                         <a class="featured-work" href=".//portfolio-pages/adventure-finder.html">
-                             <img class="img-fluid" src="img/featured-work-adventure-finder.jpg" alt="">
+                      <div class="featured-work-wrapper">
+                         <a class="portfolio-item x2" href="portfolio-pages/adventure-finder.html">
+                             <img class="img-fluid" src="img/portfolio-items/adventure-finder.jpg" alt="">
                              <span class="overlay">
                                  <h3>Adventure Finder App</h3>
                                  <p>Designed for people to spend less time looking for their next adventure and more time where they want to&nbsp;be.</p>
                              </span>
                          </a>
-                         <a class="featured-work" href="portfolio-pages/demo-reel.html">
-                             <img class="img-fluid" src="img/featured-work-demo-reel.jpg" alt="">
+                         <a class="portfolio-item x2" href="portfolio-pages/demo-reel.html">
+                             <img class="img-fluid" src="img/portfolio-items/demo-reel.jpg" alt="">
                              <span class="overlay">
                                  <h3>Demo Reel</h3>
                                  <p>A collection of my best personal and commercial&nbsp;work.</p>
