--- a/portfolio.html
+++ b/portfolio.html
@@ -96,271 +96,64 @@
    </div>
    <!--END HEADER-->
    <!--PORTFOLIO-->
-   <div class="portfolio">
-     <div class="portfolio-item-wrapper">
-         <div class="container">
-             <div class="row">
-                <div class="col-xs-12">
-                    <div class="portfolio-item">
-                        <img class="img-fluid portfolio-thumbail" src="img/portfolio/demo-reel.png" alt="">
-                       <div class="text">
-                           <h2>Demo Reel</h2>
-                           <p>A collection of my best personal and commercial work.</p>
-                           <a class="see-project" href="portfolio-pages/demo-reel.html">View demo reel</a>
-                       </div>
-                    </div>
-                </div>
-           </div>
-         </div>
-     </div>
-
-       <div class="portfolio-item-wrapper">
-         <div class="container">
-             <div class="row">
-                <div class="col-xs-12">
-                    <div class="portfolio-item">
-                       <div class="text">
-                           <h2>Adventure Finder App</h2>
-                           <p>People who love the outdoors are always seeking new adventures and destinations to discover. Designing an app that caters to this need to explore and share experiences will assist users with planning their next trip.</p>
-                           <a class="toggle-link see-project" data-toggle-class="#adventure-finder-app">View case study</a>
-                       </div>
-                       <img class="img-fluid portfolio-thumbail" src="img/portfolio/adventure-finder-app.png" alt="">
-                    </div>
-                </div>
-           </div>
-         </div>
-     </div>
-
-       <div class="portfolio-item-wrapper">
-         <div class="container">
-             <div class="row">
-                <div class="col-xs-12">
-                    <div class="portfolio-item">
-                       <div class="text">
-                           <h2>Petcare app</h2>
-                           <p>This app creates an easy way to keep all of the information about each pet in one place. Scheduling vet appointments has never been easier! There is even a reminder for when a pet is due for an annual check-up.</p>
-                           <a class="toggle-link see-project" data-toggle-class="#petcare-app">View project</a>
-                       </div>
-                       <img class="img-fluid portfolio-thumbail" src="img/portfolio/petcare-app-1.png" alt="">
-                    </div>
-                </div>
-           </div>
-         </div>
-     </div>
-
-<!--
-       <div class="row white-bg center-content portfolio-content details zeroHeight" id="petcare-app">
-           <div class="col-sm-10 col-sm-offset-1 col-xs-12 orange-border"></div>
-           <div class="col-sm-10 col-sm-offset-1 col-xs-12">
-               <a class="toggle-link close" data-toggle-class="#petcare-app"></a>
-           </div>
-           <div class="col-sm-10 col-sm-offset-1 col-xs-12">
-               <div class="row center-content">
-                   <div class="col-xs-12 explanation-text">
-                      <img class="img-fluid hidden-sm-down" src="img/portfolio/petcare-app-2.png" alt="">
-                      <img class="img-fluid hidden-md-up" src="img/portfolio/petcare-app-3.png" alt="">
-                   </div>
-               </div>
-           </div>
-       </div>
--->
-
-        <div class="portfolio-item-wrapper">
-         <div class="container">
-             <div class="row">
-                <div class="col-xs-12">
-                    <div class="portfolio-item">
-                      <img class="img-fluid portfolio-thumbail" src="img/portfolio/icons/icons.png" alt="">
-                       <div class="text">
-                           <h2>A collection of icons</h2>
-                           <p>Icons are great visuals for websites and apps. They communicate information quicker than words. Here are various themes of icons that I have designed.</p>
-                           <a class="toggle-link see-project" data-toggle-class="#icons">View all</a>
-                       </div>
-                    </div>
-                </div>
-           </div>
-         </div>
-     </div>
-
-<!--
-       <div class="row grey-bg center-content portfolio-content details zeroHeight" id="icons">
-           <div class="col-sm-10 col-sm-offset-1 col-xs-12 orange-border"></div>
-           <div class="col-sm-10 col-sm-offset-1 col-xs-12">
-               <a class="toggle-link close" data-toggle-class="#icons"></a>
-           </div>
-           <div class="col-sm-10 col-sm-offset-1 col-xs-12">
-               <div class="row center-content">
-                   <div class="col-md-6 col-xs-12 explanation-text">
-                      <img class="img-fluid" src="img/portfolio/icons/healthcare-icons.png" alt="">
-                   </div>
-                   <div class="col-md-6 col-xs-12 explanation-text">
-                       <img class="img-fluid" src="img/portfolio/icons/financial-icons.png" alt="">
-                   </div>
-               </div>
-           </div>
-           <div class="col-sm-10 col-sm-offset-1 col-xs-12">
-               <div class="row center-content">
-                  <div class="col-md-6 col-xs-12 explanation-text">
-                      <img class="img-fluid" src="img/portfolio/icons/camping-icons-2.png" alt="">
-                   </div>
-                   <div class="col-md-6 col-xs-12 explanation-text">
-                       <img class="img-fluid" src="img/portfolio/icons/camping-icons.png" alt="">
-                   </div>
-               </div>
-           </div>
-       </div>
--->
-
-
-       <div class="portfolio-item-wrapper">
-         <div class="container">
-             <div class="row">
-                <div class="col-xs-12">
-                    <div class="portfolio-item">
-                       <div class="text">
-                           <h2>Corbin Visual App Video</h2>
-                           <p>I worked with Corbin Visual to create an animated explainer video to promote their app for smartphones. The theme around this video is “your project in your hands”. The video’s purpose is to not only promote the company’s app, but also to make clients feel more at ease when working on a project with Corbin Visual.</p>
-                           <a class="toggle-link see-project" data-toggle-class="#corbin-visual">View case study</a>
-                       </div>
-                       <img class="img-fluid portfolio-thumbail" src="img/portfolio/corbin-visual.png" alt="">
-                    </div>
-                </div>
-           </div>
-         </div>
-     </div>
-
-<!--
-       <div class="row white-bg center-content portfolio-content details zeroHeight" id="corbin-visual">
-           <div class="col-sm-10 col-sm-offset-1 col-xs-12 orange-border"></div>
-           <div class="col-sm-10 col-sm-offset-1 col-xs-12">
-               <a class="toggle-link close" data-toggle-class="#corbin-visual"></a>
-           </div>
-           <div class="col-sm-10 col-sm-offset-1 col-xs-12 explanation-text">
-               <div class="row center-content">
-                   <div class="col-md-6 col-xs-12 text">
-                      <h3>The Challenge</h3>
-                       <p>To create an animated video that promotes the Corbin Visual app and explains its core purpose: to make clients feel more at ease when working on their projects.</p>
-                   </div>
-                   <div class="col-md-6 col-xs-12">
-                       <img class="img-fluid" src="img/portfolio/corbin-visual-still-1.jpg" alt="">
-                   </div>
-               </div>
-           </div>
-           <div class="col-sm-10 col-sm-offset-1 col-xs-12 explanation-text">
-               <div class="row center-content">
-                  <div class="col-md-6 col-xs-12 hidden-md-up text">
-                      <h3>The Process</h3>
-                       <p>The animation was storyboarded out to show how each scene would flow into the next. The story starts off with a client that has a big idea, but they are not sure how to nurture it and bring it to life. That's where Corbin Visual can help. In the app, you can view other successful projects that were created by Corbin Visual. You can also manage your project and add input.</p>
-                   </div>
-                   <div class="col-md-6 col-xs-12">
-                       <img class="img-fluid" src="img/portfolio/corbin-visual-storyboard.jpg" alt="">
-                   </div>
-                   <div class="col-md-6 col-xs-12 hidden-sm-down text">
-                      <h3>The Process</h3>
-                       <p>The animation was storyboarded out to show how each scene would flow into the next. The story starts off with a client that has a big idea, but they are not sure how to nurture it and bring it to life. That's where Corbin Visual can help. In the app, you can view other successful projects that were created by Corbin Visual. You can also manage your project and add input.</p>
-                   </div>
-               </div>
-           </div>
-           <div class="col-sm-10 col-sm-offset-1 col-xs-12 explanation-text">
-               <div class="row center-content">
-                   <div class="col-md-6 col-xs-12 text">
-                      <h3>The Result</h3>
-                       <p>An animated explainer video that puts clients at ease when working with Corbin Visual.</p>
-                   </div>
-                   <div class="col-md-6 col-xs-12">
-                       <div class="video-wrapper">
-                    <div class="inner-video-wrapper">
-                       <img class="ratio" src="http://placehold.it/16x9"/>
-                        <iframe src="https://player.vimeo.com/video/95443860" width="1920" height="1080" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
-                    </div>
-                </div>
-                   </div>
-               </div>
-           </div>
-       </div>
--->
-
-       <div class="portfolio-item-wrapper">
-         <div class="container">
-             <div class="row">
-                <div class="col-xs-12">
-                    <div class="portfolio-item">
-                      <img class="img-fluid portfolio-thumbail" src="img/portfolio/camping-icon-animation.png" alt="">
-                       <div class="text">
-                           <h2>Camping icon animation</h2>
-                           <p>This is a personal project, where I experimented with line animation. I love camping, so it was the perfect inspiration for this piece!</p>
-                           <a class="toggle-link see-project" data-toggle-class="#camping-icon-animation">View Project</a>
-                       </div>
-                    </div>
-                </div>
-           </div>
-         </div>
-     </div>
-
-<!--
-       <div class="row grey-bg center-content portfolio-content details zeroHeight" id="camping-icon-animation">
-           <div class="col-sm-10 col-sm-offset-1 col-xs-12 orange-border"></div>
-           <div class="col-sm-10 col-sm-offset-1 col-xs-12">
-               <a class="toggle-link close" data-toggle-class="#camping-icon-animation"></a>
-           </div>
-           <div class="col-sm-10 col-sm-offset-1 col-xs-12 more-content">
-               <div class="video-wrapper">
-                    <div class="inner-video-wrapper">
-                       <img class="ratio" src="http://placehold.it/16x9"/>
-                        <iframe src="https://player.vimeo.com/video/165732862" width="1920" height="1080" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
-                    </div>
-                </div>
-           </div>
-       </div>
--->
-
-
-      <div class="portfolio-item-wrapper">
-         <div class="container">
-             <div class="row">
-                <div class="col-xs-12">
-                    <div class="portfolio-item">
-                       <div class="text">
-                           <h2>Get active commercial</h2>
-                           <p>This commercial promotes a healthy, active lifestyle. For this piece, I focused on morphing techniques and transitions between scenes.</p>
-                           <a class="toggle-link see-project" data-toggle-class="#get-active">View Project</a>
-                       </div>
-                       <img class="img-fluid portfolio-thumbail" src="img/portfolio/get-active.png" alt="">
-                    </div>
-                </div>
-           </div>
-         </div>
-     </div>
-
-<!--
-       <div class="row white-bg center-content portfolio-content details zeroHeight" id="get-active">
-           <div class="col-sm-10 col-sm-offset-1 col-xs-12 orange-border"></div>
-           <div class="col-sm-10 col-sm-offset-1 col-xs-12">
-               <a class="toggle-link close" data-toggle-class="#get-active"></a>
-           </div>
-           <div class="col-sm-10 col-sm-offset-1 col-xs-12 more-content">
-               <div class="video-wrapper">
-                    <div class="inner-video-wrapper">
-                       <img class="ratio" src="http://placehold.it/16x9"/>
-                        <iframe src="https://player.vimeo.com/video/88415356" width="1920" height="1080" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
-                    </div>
-                </div>
-           </div>
-       </div>
--->
-
-<!--
-       <div class="background hide popup-button">
-           <div class="camping-icon-animation-popup hide popup-wrapper" data-trigger=".camping-icon-animation-popup" data-class="show">
-                <div class="popup popup-button" data-trigger=".camping-icon-animation-popup" data-class="show">
-                    <div class="popup-content">
-                        <img class="img-fluid" src="img/portfolio/adventure-finder-app-user-flow.png" alt="">
-                    </div>
-                </div>
+   <div class="portfolio grey-bg">
+    <div class="container">
+        <div class="row">
+            <div class="col-xs-12">
+                <div class="portfolio-content-wrapper">
+                     <a class="portfolio-item x2" href="portfolio-pages/demo-reel.html">
+                         <img class="img-fluid" src="img/portfolio-items/demo-reel.jpg" alt="">
+                         <span class="overlay">
+                             <h3>Demo Reel</h3>
+                             <p>A collection of my best personal and commercial&nbsp;work.</p>
+                         </span>
+                     </a>
+                     <a class="portfolio-item x2" href=".//portfolio-pages/adventure-finder.html">
+                         <img class="img-fluid" src="img/portfolio-items/adventure-finder.jpg" alt="">
+                         <span class="overlay">
+                             <h3>Adventure Finder App</h3>
+                             <p>Designed for people to spend less time looking for their next adventure and more time where they want to&nbsp;be.</p>
+                         </span>
+                     </a>
+                     <a class="portfolio-item x2" href="portfolio-pages/petcare-app.html">
+                         <img class="img-fluid" src="img/portfolio-items/petcare-app.jpg" alt="">
+                         <span class="overlay">
+                             <h3>Petcare app</h3>
+                             <p>Scheduling vet appointments has never been easier with this&nbsp;app!</p>
+                         </span>
+                     </a>
+                     <a class="portfolio-item x2" href="portfolio-pages/icons.html">
+                         <img class="img-fluid" src="img/portfolio-items/icons.jpg" alt="">
+                         <span class="overlay">
+                             <h3>A collection of icons</h3>
+                             <p>Icons are great visuals for websites and apps. They communicate information quicker than&nbsp;words.</p>
+                         </span>
+                     </a>
+                     <a class="portfolio-item x2" href="portfolio-pages/corbin-visual.html">
+                         <img class="img-fluid" src="img/portfolio-items/corbin-visual.jpg" alt="">
+                         <span class="overlay">
+                             <h3>Corbin Visual app video</h3>
+                             <p>An animated explainer video to promote the Corbin Visual&nbsp;app.</p>
+                         </span>
+                     </a>
+                     <a class="portfolio-item x2" href="portfolio-pages/camping-icon-animation.html">
+                         <img class="img-fluid" src="img/portfolio-items/camping-icon-animation.jpg" alt="">
+                         <span class="overlay">
+                             <h3>Camping icon animation</h3>
+                             <p>I love camping, so it was the perfect inspiration for this&nbsp;piece!</p>
+                         </span>
+                     </a>
+                     <a class="portfolio-item x2" href="portfolio-pages/get-active.html">
+                         <img class="img-fluid" src="img/portfolio-items/get-active.jpg" alt="">
+                         <span class="overlay">
+                             <h3>Get active commercial</h3>
+                             <p>This commercial promotes a healthy, active&nbsp;lifestyle.</p>
+                         </span>
+                     </a>
+                  </div>
             </div>
-       </div>
--->
-
+        </div>
+    </div>
    </div><!--END PORTFOLIO-->
 
     <!--FOOTER-->
