--- a/index.html
+++ b/index.html
@@ -105,15 +105,15 @@
                          <a class="portfolio-item x2" href="portfolio-pages/adventure-finder.html">
                              <img class="img-fluid" src="img/portfolio-items/adventure-finder.jpg" alt="">
                              <span class="overlay">
-                                 <h3>Adventure Finder App</h3>
-                                 <p>Designed for people to spend less time looking for their next adventure and more time where they want to&nbsp;be.</p>
+                                 <h3>Adventure Finder</h3>
+                                 <p>App &amp; website design</p>
                              </span>
                          </a>
                          <a class="portfolio-item x2" href="portfolio-pages/demo-reel.html">
                              <img class="img-fluid" src="img/portfolio-items/demo-reel.jpg" alt="">
                              <span class="overlay">
                                  <h3>Demo Reel</h3>
-                                 <p>A collection of my best personal and commercial&nbsp;work.</p>
+                                 <p>2016</p>
                              </span>
                          </a>
                       </div>
