--- a/portfolio-pages/corbin-visual.html
+++ b/portfolio-pages/corbin-visual.html
@@ -95,7 +95,7 @@
    <div class="grey-bg">
        <div class="container">
            <div class="row intro-text">
-             <div class="col-xs-12">
+             <div class="col-xs-12 col-lg-8">
                 <h2>Corbin Visual app video</h2>
                 <p>I worked with Corbin Visual to create an animated explainer video to promote their app for smartphones. The theme around this video is “your project in your hands”. The video’s purpose is to not only promote the company’s app, but also to make clients feel more at ease when working on a project with Corbin Visual.</p>
              </div>
@@ -150,7 +150,7 @@
    <div class="featured-work-banner adventure-finder-banner">
        <div class="container">
            <div class="row">
-             <div class="col-xs-12">
+             <div class="col-xs-12 col-lg-10 offset-lg-1 col-xl-8 offset-xl-2">
                 <div class="wrapper">
                     <div class="text">
                         <h2>Adventure Finder</h2>
