--- a/portfolio-pages/demo-reel.html
+++ b/portfolio-pages/demo-reel.html
@@ -95,7 +95,7 @@
    <div class="grey-bg">
        <div class="container">
            <div class="row intro-text">
-             <div class="col-xs-12">
+             <div class="col-xs-12 col-lg-8">
                 <h2>Demo Reel</h2>
                 <p>Here is a collection of my best personal and commercial work.</p>
                 <p>Music: Gold on the Ceiling by The Black Keys</p>
@@ -151,7 +151,7 @@
    <div class="featured-work-banner adventure-finder-banner">
        <div class="container">
            <div class="row">
-             <div class="col-xs-12">
+             <div class="col-xs-12 col-lg-10 offset-lg-1 col-xl-8 offset-xl-2">
                 <div class="wrapper">
                     <div class="text">
                         <h2>Adventure Finder</h2>
