--- a/portfolio-pages/iconography.html
+++ b/portfolio-pages/iconography.html
@@ -92,125 +92,58 @@
    <!--END HEADER-->
 
    <!--PAGE CONTENT-->
-   <div class="adventure-finder">
-       <div class="banner">
-           <div class="container">
-               <div class="row intro-text">
-                 <div class="col-xs-12">
-                    <img class="img-fluid" src="../img/portfolio/adventure-finder-logo.png" alt="">
-                 </div>
-               </div>
+   <div class="grey-bg iconography-wrapper">
+       <div class="container">
+           <div class="row intro-text">
+             <div class="col-xs-12 col-lg-8">
+                <h2>A Collection of Icons</h2>
+                <p>Icons are great visuals for websites and apps. They communicate information quicker than words. Here are various themes of icons that I have designed.</p>
+             </div>
            </div>
-       </div>
-       <div class="the-challenge">
-           <div class="container">
-               <div class="row">
-                   <div class="col-xs-12">
-                       <div class="wrapper">
-                            <div class="photo-wrapper">
-                               <img class="img-fluid" src="../img/portfolio/adventure-finder-phone-1.png" alt="">
-                           </div>
-                           <div class="text">
-                               <h2>The Challenge</h2>
-                               <p>With so many websites to visit for information, the process for choosing a new adventure can be a tedious and time consuming process. The app brings all of the information to one place for an easy-to-use experience. Users can discover new adventure destinations, see ratings, view images and write reviews all in one place.</p>
-                           </div>
+           <div class="row">
+               <div class="col-xs-12">
+                   <div class="stills clearfix">
+                      <div class="photo-wrapper w41">
+                           <img class="img-fluid" src="../img/portfolio/icons-lifestyle-1.jpg" alt="">
                        </div>
-                   </div>
-               </div>
-           </div>
-       </div>
-       <div class="the-process">
-           <div class="container">
-               <div class="row">
-                   <div class="col-xs-12">
-                       <div class="wrapper">
-                            <div class="photo-wrapper">
-                               <a class="popup-button" href="javascript:void(0);" data-trigger=".user-flow" data-class="show">
-                                    <img class="img-fluid" src="../img/portfolio/adventure-finder-app-user-flow.png" alt="">
-                                </a>
-                           </div>
-                           <div class="text">
-                               <h2>The Process</h2>
-                               <p>The user flow demonstrates how the user may interact with the app. A user starts off by picking what type of adventure they are looking for (ie. hiking, canoeing, camping, etc.). They  can view more details about specific locations. A prototype of the after was created using InVision, giving a true feel of how the user would interact with the app.</p>
-                               <a class="see-project" href="https://invis.io/PX8783MQR" target="_blank">View prototype</a>
-                           </div>
+                       <div class="photo-wrapper w59">
+                           <img class="img-fluid" src="../img/portfolio/icons-technology.jpg" alt="">
                        </div>
-                   </div>
-               </div>
-           </div>
-       </div>
-       <div class="the-result">
-          <div class="triangle"></div>
-           <div class="container">
-               <div class="row">
-                   <div class="col-xs-12">
-                       <div class="wrapper">
-                           <div class="text">
-                               <h2>The Result</h2>
-                               <p>When designing the app, some useful features that came to mind to enhance the user experience include uploading pictures, adding the destination to their list and rating specific locations. There option is also the option to view adventure locations near the user’s current GPS location. This is useful is they are unfamiliar with the area and are looking for an adventure or if they are looking for something new to check out near where they live. The Adventure Finder app has all of the information in one place. This app will allow nature lovers to spend more time experiencing their adventures and less time finding and deciding upon them.</p>
-                           </div>
-                           <div class="photo-wrapper">
-                               <img class="img-fluid" src="../img/portfolio/adventure-finder-phone-2.png" alt="">
-                               <img class="img-fluid" src="../img/portfolio/adventure-finder-phone-2-md.png" alt="">
-                           </div>
+                       <div class="photo-wrapper full">
+                           <img class="img-fluid" src="../img/portfolio/icons-camping-1.jpg" alt="">
                        </div>
-                   </div>
+                       <div class="photo-wrapper x2">
+                           <img class="img-fluid" src="../img/portfolio/icons-financial.jpg" alt="">
+                       </div>
+                       <div class="photo-wrapper x2">
+                           <img class="img-fluid" src="../img/portfolio/icons-camping-2.jpg" alt="">
+                       </div>
+                       <div class="photo-wrapper w62">
+                           <img class="img-fluid" src="../img/portfolio/icons-healthcare.jpg" alt="">
+                       </div>
+                       <div class="photo-wrapper w38 hidden-md-up">
+                           <img class="img-fluid" src="../img/portfolio/icons-lifestyle-2-xs.jpg" alt="">
+                       </div>
+                       <div class="photo-wrapper w38 hidden-sm-down">
+                           <img class="img-fluid" src="../img/portfolio/icons-lifestyle-2-md-up.jpg" alt="">
+                       </div>
+                    </div>
                </div>
            </div>
        </div>
-       <div class="the-website">
-           <div class="container">
-               <div class="row">
-                 <div class="col-xs-12">
-                    <div class="text">
-                        <h2>The Website</h2>
-                        <p>It is the perfect tool for sharing on social media to promote the app and ultimately result helping people find their next adventure!</p>
-                    </div>
-                 </div>
-               </div>
-           </div>
-       </div>
-       <div class="the-website-img">
-           <div class="container">
-               <div class="row">
-                 <div class="col-xs-12">
-                    <div class="photo-wrapper">
-                        <img class="img-fluid" src="../img/portfolio/adventure-finder-website.png" alt="">
-                    </div>
-                 </div>
-               </div>
-           </div>
-       </div>
-
-       <!--Popup-->
-       <div class="background hide popup-button">
-           <div class="user-flow hide popup-wrapper" data-trigger=".user-flow" data-class="show">
-                <div class="popup popup-button" data-trigger=".user-flow" data-class="show">
-                    <div class="popup-content">
-                        <div class="inner-content">
-                            <a data-trigger=".user-flow" data-class="show" class="close-btn" href="javascript:void(0);">
-                                <span></span>
-                                <span></span>
-                            </a>
-                            <img class="img-fluid" src="../img/portfolio/adventure-finder-app-user-flow-full.png" alt="">
-                        </div>
-                    </div>
-                </div>
-            </div>
-       </div>
-    </div>
+   </div>
 
    <!--Featured work banner-->
-   <div class="featured-work-banner">
+   <div class="featured-work-banner adventure-finder-banner">
        <div class="container">
            <div class="row">
              <div class="col-xs-12 col-lg-10 offset-lg-1 col-xl-8 offset-xl-2">
                 <div class="wrapper">
                     <div class="text">
-                        <h2>Demo reel</h2>
-                        <a class="see-project" href="demo-reel.html">View case study</a>
+                        <h2>Adventure Finder</h2>
+                        <a class="see-project" href="adventure-finder.html">View case study</a>
                     </div>
-                    <img class="img-fluid" src="../img/portfolio/demo-reel-banner.jpg" alt="">
+                    <img class="img-fluid" src="../img/portfolio/adventure-finder-banner.png" alt="">
                 </div>
              </div>
            </div>
