--- a/portfolio.html
+++ b/portfolio.html
@@ -101,53 +101,52 @@
         <div class="row">
             <div class="col-xs-12">
                 <div class="portfolio-content-wrapper">
-                     <a class="portfolio-item x2" href="portfolio-pages/demo-reel.html">
+                     <a class="portfolio-item" href="portfolio-pages/demo-reel.html">
                          <img class="img-fluid" src="img/portfolio-items/demo-reel.jpg" alt="">
                          <span class="overlay">
                              <h3>Demo Reel</h3>
-                             <p>A collection of my best personal and commercial&nbsp;work.</p>
+                             <p>2016</p>
                          </span>
                      </a>
-                     <a class="portfolio-item x2" href=".//portfolio-pages/adventure-finder.html">
+                     <a class="portfolio-item" href=".//portfolio-pages/adventure-finder.html">
                          <img class="img-fluid" src="img/portfolio-items/adventure-finder.jpg" alt="">
                          <span class="overlay">
-                             <h3>Adventure Finder App</h3>
-                             <p>Designed for people to spend less time looking for their next adventure and more time where they want to&nbsp;be.</p>
+                             <h3>Adventure Finder</h3>
+                             <p>App &amp; website design</p>
                          </span>
                      </a>
-                     <a class="portfolio-item x2" href="portfolio-pages/petcare-app.html">
+                     <a class="portfolio-item" href="portfolio-pages/petcare-app.html">
                          <img class="img-fluid" src="img/portfolio-items/petcare-app.jpg" alt="">
                          <span class="overlay">
-                             <h3>Petcare app</h3>
-                             <p>Scheduling vet appointments has never been easier with this&nbsp;app!</p>
+                             <h3>Petcare</h3>
+                             <p>App design</p>
                          </span>
                      </a>
-                     <a class="portfolio-item x2" href="portfolio-pages/icons.html">
+                     <a class="portfolio-item" href="portfolio-pages/iconography.html">
                          <img class="img-fluid" src="img/portfolio-items/icons.jpg" alt="">
                          <span class="overlay">
-                             <h3>A collection of icons</h3>
-                             <p>Icons are great visuals for websites and apps. They communicate information quicker than&nbsp;words.</p>
+                             <h3>Iconography</h3>
                          </span>
                      </a>
-                     <a class="portfolio-item x2" href="portfolio-pages/corbin-visual.html">
+                     <a class="portfolio-item" href="portfolio-pages/corbin-visual.html">
                          <img class="img-fluid" src="img/portfolio-items/corbin-visual.jpg" alt="">
                          <span class="overlay">
-                             <h3>Corbin Visual app video</h3>
-                             <p>An animated explainer video to promote the Corbin Visual&nbsp;app.</p>
+                             <h3>Corbin Visual</h3>
+                             <p>Explainer video</p>
                          </span>
                      </a>
-                     <a class="portfolio-item x2" href="portfolio-pages/camping-icon-animation.html">
+                     <a class="portfolio-item" href="portfolio-pages/camping-icon-animation.html">
                          <img class="img-fluid" src="img/portfolio-items/camping-icon-animation.jpg" alt="">
                          <span class="overlay">
                              <h3>Camping icon animation</h3>
-                             <p>I love camping, so it was the perfect inspiration for this&nbsp;piece!</p>
+                             <p>Video</p>
                          </span>
                      </a>
-                     <a class="portfolio-item x2" href="portfolio-pages/get-active.html">
+                     <a class="portfolio-item" href="portfolio-pages/get-active.html">
                          <img class="img-fluid" src="img/portfolio-items/get-active.jpg" alt="">
                          <span class="overlay">
                              <h3>Get active commercial</h3>
-                             <p>This commercial promotes a healthy, active&nbsp;lifestyle.</p>
+                             <p>Video</p>
                          </span>
                      </a>
                   </div>
