--- a/portfolio-pages/camping-icon-animation.html
+++ b/portfolio-pages/camping-icon-animation.html
@@ -95,7 +95,7 @@
    <div class="grey-bg">
        <div class="container">
            <div class="row intro-text">
-             <div class="col-xs-12">
+             <div class="col-xs-12 col-lg-8">
                 <h2>Camping icon animation</h2>
                 <p>This is a personal project, where I experimented with line animation. I love camping, so it was the perfect inspiration for this piece!</p>
              </div>
@@ -144,7 +144,7 @@
    <div class="featured-work-banner">
        <div class="container">
            <div class="row">
-             <div class="col-xs-12">
+             <div class="col-xs-12 col-lg-10 offset-lg-1 col-xl-8 offset-xl-2">
                 <div class="wrapper">
                     <div class="text">
                         <h2>Demo reel</h2>
