--- a/portfolio-pages/get-active.html
+++ b/portfolio-pages/get-active.html
@@ -95,7 +95,7 @@
    <div class="grey-bg">
        <div class="container">
            <div class="row intro-text">
-             <div class="col-xs-12">
+             <div class="col-xs-12 col-lg-8">
                 <h2>Get Active Commercial</h2>
                 <p>This commercial promotes a healthy, active lifestyle. For this piece, I focused on morphing techniques and transitions between scenes.</p>
              </div>
@@ -122,20 +122,17 @@
            <div class="row">
              <div class="col-xs-12">
                  <div class="stills clearfix">
-                   <div class="photo-wrapper x2">
+                  <div class="photo-wrapper x4">
                        <img class="img-fluid" src="../img/portfolio/get-active-still-1.jpg" alt="">
                    </div>
-                   <div class="photo-wrapper x2">
+                   <div class="photo-wrapper x4">
                        <img class="img-fluid" src="../img/portfolio/get-active-still-2.jpg" alt="">
                    </div>
-                   <div class="photo-wrapper full">
+                   <div class="photo-wrapper x4">
                        <img class="img-fluid" src="../img/portfolio/get-active-still-3.jpg" alt="">
                    </div>
-                   <div class="photo-wrapper x2">
+                   <div class="photo-wrapper x4">
                        <img class="img-fluid" src="../img/portfolio/get-active-still-4.jpg" alt="">
-                   </div>
-                   <div class="photo-wrapper x2">
-                       <img class="img-fluid" src="../img/portfolio/get-active-still-5.jpg" alt="">
                    </div>
                 </div>
              </div>
@@ -147,7 +144,7 @@
    <div class="featured-work-banner adventure-finder-banner">
        <div class="container">
            <div class="row">
-             <div class="col-xs-12">
+             <div class="col-xs-12 col-lg-10 offset-lg-1 col-xl-8 offset-xl-2">
                 <div class="wrapper">
                     <div class="text">
                         <h2>Adventure Finder</h2>
